--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
     <head th:fragment="head">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Spring login application - Politechnika Lubelska</title>
+        <title>ToDoList - PAI Project</title>
         <style>
             .footer {
                 position: fixed; bottom: 0px; left: 1px; height: 50px; width: 100%;
@@ -26,35 +27,46 @@
     </head>
     <body>
         <div th:fragment="navigationPanel">
-            <ul class="nav">
-                <li sec:authorize="!isAuthenticated()">
-                    <a th:href="@{/register}">Zarejestruj się</a>
-                </li>
-                <li sec:authorize="isAuthenticated()">
-                    <a th:href="@{/profile}">PROFIL</a>
-                </li>
-                <li sec:authorize="isAuthenticated()">
-                    <a th:href="@{/edit}">Edytuj swoje dane użytkownika</a>
-                </li>
-                <li sec:authorize="isAuthenticated()">
-                    <a th:href="@{/users}">Wyświetl użytkowników</a>
-                </li>
-                <li sec:authorize="isAuthenticated()">
-                    <a th:href="@{/delete}">Usuń konto</a>
-                </li>
-                <li sec:authorize="!isAuthenticated()">
-                    <a th:href="@{/login}">Zaloguj się</a>
-                </li>
-                <li sec:authorize="isAuthenticated()">
-                    <a th:href="@{/logout}">Wyloguj się</a>
-                </li>
-            </ul>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand">ToDoList</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item" sec:authorize="!isAuthenticated()">
+                                <a class="nav-link" aria-current="page" th:href="@{/register}">Zarejestruj się</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" aria-current="page" th:href="@{/profile}">Profil</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" aria-current="page" th:href="@{/edit}">Edytuj swoje dane</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" aria-current="page" th:href="@{/users}">Wyświetl użytkowników</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" aria-current="page" th:href="@{/delete}">Usuń konto</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="!isAuthenticated()">
+                                <a class="nav-link" aria-current="page" th:href="@{/login}">Zaloguj się</a>
+                            </li>
+                            <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" aria-current="page" th:href="@{/logout}">Wyloguj się</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
         <div th:fragment="footer">
             <footer class="footer">
                 <hr />
-                <p>Politechnika Lubelska, wprowadzenie do Spring Boot</p>
+                <p>ToDoList - Andrzej Oleszczuk, PAI</p>
             </footer>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     </body>
 </html>
