--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl" xmlns:th="http://www.thymeleaf.org">
     <head th:include="layout :: head">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     </head>
     <body>
         <div th:include="layout :: navigationPanel"></div>
-        <h1>Logowanie do systemu:</h1>
+        <h2>Logowanie do systemu:</h2>
         <form th:action="@{/login}" method="POST">
-            <div class="input-group input-group-sm mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-sm">Small</span>
-                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">@</span>
+            <div class="input-group mb-2">
+                <span class="input-group-text" id="basic-addon1"></span>
                 <input type="text" class="form-control" placeholder="Login" aria-label="Username" aria-describedby="basic-addon1" name="login">
             </div>
-            <input type="password" name="passwd" placeholder="Hasło"/>
+            <div class="input-group mb-2">
+                <span class="input-group-text" id="basic-addon1"></span>
+                <input type="password" class="form-control" placeholder="Hasło" aria-label="Username" aria-describedby="basic-addon1" name="passwd">
+            </div>
             <button type="submit">Zaloguj się</button>
         </form>
         <div th:include="layout :: footer"></div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     </body>
 </html>
